--- a/index.html
+++ b/index.html
@@ -2,29 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>William's Web Dev Portfolio</title>
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>William's Web Dev Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
+    <h1>William Chase - My Resume</h1>
+    <img src="./assets/profile.jpg" height="200" alt="William">
     <hr>
-    <h3>
-        <a href="./public/movie-ranking.html">Movie Ranking Project</a>
-    </h3>    
-        <img src="./assets/images/movierankluke.png" height="200" alt="Movie Image Preview">
-    <h3>
-        <a href="./public/birthday-invite.html">Birthday Invite Project</a>
-    </h3>
-        <img src="./assets/images/birthdayluke.png" height="200" alt="Birthday Image Preview">
-    <hr>
-    <h4>
-        <a href="./public/about.html" alt="About Me">About Me</a>
-        <a href="./public/contact.html" alt="Contact Me">Contact Me</a>
-    </h4>  
-    
+    <h2>Summary</h2>
+    Hello and welcome to my online Resume. The page shows a summary of my Education, Work Experiance, and Skills.
+    <h2>Education</h2>
+    <ul>
+        <li>University of Nebrask at Kearney - BS in IT - 2011</li>
+        <li>Manhattan Christian College - BA in Bibilical Studies - 2004</li>
+        <li>Kearny High School - Diploma - 1998</li>
+    </ul>
+    <h2>Work Experience</h2>
+    <ul>
+        <li>Field Squared - Cloud Network Implementation Architect - 2020 to Present</li>
+        <li>Dish Network - Mobility Network Manager - 2015 to 2020</li>
+    </ul>
+    <h2>Skills</h2>
+    <ul>
+        <li>AWS Cloud</li>
+        <li>HTML/CSS/Javascript</li>
+        <li>JSON</li>
+        <li>API</li>
+        <li>SQL</li>
+    </ul>
+    <h2>
+        <a href="./Public/Contact.html">Contact</a>
+        <a href="./Public/Hobbies.html">Hobbies</a>
+    </h2>
+    <footer>
+        <p>William Chase copyright 2023</p>
+    </footer>
 </body>
 </html>
-
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
